[gd_scene load_steps=27 format=3 uid="uid://dj73otyatp13s"]

[ext_resource type="Script" path="res://Scripts/Customer.gd" id="1_ahv4p"]
[ext_resource type="Texture2D" uid="uid://bki2p7asrfhna" path="res://Assets/Sprites/customers/customer-8.png" id="2_n4vlv"]
[ext_resource type="Texture2D" uid="uid://cm53osw6fm8x4" path="res://Assets/Sprites/shadow.png" id="2_o3ogl"]
[ext_resource type="Texture2D" uid="uid://bnelm6qa3ig6i" path="res://Assets/Sprites/customers/customer-9.png" id="3_5ayww"]
[ext_resource type="Texture2D" uid="uid://dsb1wvn03yaxe" path="res://Assets/Sprites/customers/customer-2.png" id="4_77wcs"]
[ext_resource type="Texture2D" uid="uid://dt1vy4pq7xegc" path="res://Assets/Sprites/customers/customer-3.png" id="5_rmfja"]
[ext_resource type="Texture2D" uid="uid://bbal06msw4c6e" path="res://Assets/Sprites/customers/customer-0.png" id="6_oax7y"]
[ext_resource type="Texture2D" uid="uid://behtd25by7ytn" path="res://Assets/Sprites/customers/customer-1.png" id="7_h2b5e"]
[ext_resource type="Texture2D" uid="uid://l5vfe1qvfcj2" path="res://Assets/Sprites/customers/customer-4.png" id="8_2ae1i"]
[ext_resource type="Texture2D" uid="uid://fon6ei81bnjq" path="res://Assets/Sprites/customers/customer-5.png" id="9_dnp2v"]
[ext_resource type="Texture2D" uid="uid://gm8ypjew5pc1" path="res://Assets/Sprites/customers/customer-6.png" id="10_mltm4"]
[ext_resource type="Texture2D" uid="uid://dshlq6e02iqqy" path="res://Assets/Sprites/customers/customer-7.png" id="11_oc3or"]
[ext_resource type="Texture2D" uid="uid://drrbob0ejwvw5" path="res://Assets/Sprites/UI/order/order-0.png" id="12_n5h7p"]
[ext_resource type="Texture2D" uid="uid://caksji4v2nowp" path="res://Assets/Sprites/UI/order/order-1.png" id="13_8ryhl"]
[ext_resource type="Texture2D" uid="uid://h8yx3dlmslxj" path="res://Assets/Sprites/UI/food/pasta.png" id="14_jhw7h"]
[ext_resource type="Texture2D" uid="uid://d2owvbb1wnkwg" path="res://Assets/Sprites/UI/food/sandwich.png" id="15_lbpa4"]
[ext_resource type="Texture2D" uid="uid://dewhsmwccvchx" path="res://Assets/Sprites/UI/food/soup.png" id="16_qqmsf"]
[ext_resource type="Texture2D" uid="uid://b3xlkvgs0li3u" path="res://Assets/Sprites/UI/customer_timer/customer_timer-0.png" id="17_fxb30"]
[ext_resource type="Texture2D" uid="uid://y53vpxpigre6" path="res://Assets/Sprites/UI/customer_timer/customer_timer-2.png" id="18_alhhg"]
[ext_resource type="Texture2D" uid="uid://c8e6yuhcfi3sm" path="res://Assets/Sprites/UI/customer_timer/customer_timer-1.png" id="19_v4i54"]
[ext_resource type="AudioStream" uid="uid://qj355tcsq0np" path="res://Sounds/sad_client.mp3" id="20_gjtam"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wmxvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n4vlv")
}, {
"duration": 1.0,
"texture": ExtResource("3_5ayww")
}],
"loop": true,
"name": &"bigodon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_77wcs")
}, {
"duration": 1.0,
"texture": ExtResource("5_rmfja")
}],
"loop": true,
"name": &"bone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_oax7y")
}, {
"duration": 1.0,
"texture": ExtResource("7_h2b5e")
}],
"loop": true,
"name": &"cartola",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_2ae1i")
}, {
"duration": 1.0,
"texture": ExtResource("9_dnp2v")
}],
"loop": true,
"name": &"laco",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_mltm4")
}, {
"duration": 1.0,
"texture": ExtResource("11_oc3or")
}],
"loop": true,
"name": &"paulin",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6uea"]
radius = 18.0
height = 44.0

[sub_resource type="SpriteFrames" id="SpriteFrames_04pcp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_n5h7p")
}, {
"duration": 1.0,
"texture": ExtResource("13_8ryhl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ra2n0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_jhw7h")
}],
"loop": true,
"name": &"pasta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_lbpa4")
}],
"loop": true,
"name": &"sandwich",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_qqmsf")
}],
"loop": true,
"name": &"soup",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_sivms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_fxb30")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_alhhg")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_v4i54")
}],
"loop": true,
"name": &"yellow",
"speed": 5.0
}]

[node name="Customer" type="CharacterBody2D" groups=["costumer"]]
scale = Vector2(2, 2)
script = ExtResource("1_ahv4p")

[node name="Sombra" type="Sprite2D" parent="."]
position = Vector2(0, 32)
scale = Vector2(0.561404, 0.727268)
texture = ExtResource("2_o3ogl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wmxvq")
animation = &"paulin"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 11)
shape = SubResource("CapsuleShape2D_p6uea")

[node name="OrderBaloon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(45, -15)
sprite_frames = SubResource("SpriteFrames_04pcp")
frame_progress = 0.738279
flip_h = true

[node name="Order" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(45, -15)
sprite_frames = SubResource("SpriteFrames_ra2n0")
animation = &"pasta"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="TimerSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-18.5, -9)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sivms")
animation = &"yellow"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 11)
shape = SubResource("CapsuleShape2D_p6uea")

[node name="sad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_gjtam")
volume_db = 10.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
